deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snappark
  labels:
    name: snappark
    app: snappark
